fix bug that would make quantity circle float away towards the left in the nav bar on smaller screens

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -14,6 +14,7 @@
 
 .cartContainer {
     justify-self: end;
+    position: relative;
 }
 
 .categories {
@@ -68,8 +69,8 @@
     background-color: #f0544d;
     color: white;
     position: absolute;
-    top: 10px;
-    right: 30px;
+    top: -5px;
+    right: 0;
     padding: 1px;
 }
   
